[project]
name = "dask-mwu"
version = "0.1.0"
description = "Hypothesis testing using the Mann Whitney U / Wilcoxon Rank sum test for dask arrays."
authors = [
    {name = "Alex Chang"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
numpy = {version = "^2.0", optional = true}

# for full compatibility with numpy 2.0
dask = { version = "^2024.5.1", optional = true }
scipy = {version = "^1.13", optional = true}
statsmodels = {version = "^0.14.2", optional = true}

# thre are breaking API changes between zarr 2 and 3
zarr = { version = "^2.0,<3.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.6"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
testcontainers = "^4.9.1"
ipycytoscape = "^1.3.3"
scikit-learn = "^1.6.1"

[tool.poetry.extras]
dask = ["dask"]
numpy = ["numpy"]
scipy = ["scipy"]
zarr2 = ["zarr"]
statsmodels = ["statsmodels"]



